kubernetes/uptime-kuma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1.19.0  # Usa una versión específica
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: uptime-kuma-data
              mountPath: /app/data
      volumes:
        - name: uptime-kuma-data
          persistentVolumeClaim:
            claimName: uptime-kuma-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  type: ClusterIP  # Cambiado a ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    app: uptime-kuma
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: uptime-kuma-network-policy
  namespace: uptime-kuma
spec:
  podSelector:
    matchLabels:
      app: uptime-kuma
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: allowed-app
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: allowed-app
